--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "vue": "^3.2.41"
     },
     "dependencies": {
-        "flowbite": "^2.2.1"
+        "element-plus": "^2.4.4",
+        "flowbite": "^2.2.1",
+        "vue-sweetalert2": "^5.0.5"
     }
 }
