--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
         "vue": "^3.2.41"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.7.17",
+        "@heroicons/vue": "^2.1.1",
+        "@vue-hero-icons/outline": "^1.7.2",
         "element-plus": "^2.4.4",
         "flowbite": "^2.2.1",
         "vue-sweetalert2": "^5.0.5"
